[jvm] revert back to default GC settings
Use default parallel GC as it performs better than CMS in most of our
use cases (classify, rebase, term. upgrades, import). 
Enable GC logging.